<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Main2Activity"
    android:background="@drawable/background2">

    <Button
        android:id="@+id/goback"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/resultbtn"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="@string/goback"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/deposit_calc"
        android:textSize="30dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="80dp"
        android:id="@+id/deposit_calc"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/author"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="20dp"/>
    <TextView
        android:id="@+id/dep_amount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dep_sum"
        android:textSize="20dp"
        android:layout_centerVertical="true"
        android:layout_marginHorizontal="70dp"/>

        <EditText
        android:id="@+id/dep_sum"
        android:layout_width="match_parent"
        android:inputType="number"
        android:layout_marginRight="50dp"
        android:layout_marginLeft="-70dp"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@id/dep_amount"
        android:layout_toRightOf="@id/dep_amount"/>
    <TextView
        android:id="@+id/dep_rate"
        android:layout_below="@+id/dep_amount"
        android:layout_marginTop="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/interest"
        android:textSize="20dp"
        android:layout_marginHorizontal="70dp"/>
    <EditText
        android:id="@+id/edit_rate"
        android:layout_width="match_parent"
        android:inputType="number"
        android:layout_marginRight="50dp"
        android:layout_marginLeft="-70dp"
        android:layout_alignBottom="@id/dep_rate"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/dep_rate"/>
    <TextView
        android:id="@+id/dep_period"
        android:layout_below="@+id/dep_rate"
        android:layout_marginTop="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dep_period"
        android:textSize="20dp"
        android:layout_marginHorizontal="70dp"/>
    <EditText
        android:id="@+id/edit_period"
        android:layout_width="match_parent"
        android:inputType="number"
        android:layout_marginRight="50dp"
        android:layout_marginLeft="-70dp"
        android:layout_alignBottom="@id/dep_period"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/dep_period"/>
    <RadioGroup
        android:id="@+id/group1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/edit_period"
        android:layout_marginLeft="200dp"
        android:orientation="horizontal">
        <RadioButton
            android:id="@+id/radio_years"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radio_years"
            android:onClick="radio_clicked"/>
        <RadioButton
            android:id="@+id/radio_months"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radio_months"
            android:onClick="radio_clicked"/>
    </RadioGroup>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/resultbtn"
        android:layout_below="@id/dep_period"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="60dp"
        android:text="@string/depCalculate"
        android:enabled="false"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/show_dep_result"
        android:layout_below="@id/deposit_calc"
        android:layout_marginBottom="70dp"
        android:layout_marginTop="20dp"
        android:layout_centerHorizontal="true"
        android:textSize="25dp"
        android:layout_marginHorizontal="40dp"
        android:textColor="#C266C5"/>
    <TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_alignParentRight="true"
    android:layout_alignParentTop="true"
    android:textSize="20dp"
    android:id="@+id/timer"
    android:layout_margin="10dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/timer"
        android:layout_toLeftOf="@id/timer"
        android:layout_alignBottom="@id/timer"
        android:textSize="20dp"/>
</RelativeLayout>